<resources>
    <string name="app_name">EntertainmentX</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">Please Check Your Internet Connection</string>
    <string name="News">News</string>
    <string name="Movies">Movies</string>
    <string name="Television">TV</string>
    <string name="Favourites">Favourites</string>
    <string name="Upcomming">Up Comming</string>
    <string name="NowPlaying">Available</string>
    <string name="Popular">Popular</string>
    <string name="Top_Rated">Top Rated</string>
    <string name="Airing_Today">Airing Today</string>
    <string name="on_tv">On TV</string>

</resources>
