<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="in.connectitude.entertainmentx.MovieFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/movie_Detail_Tab_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NowPlaying"
            />
        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Upcomming"
            />
        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Popular"
            />
        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Top_Rated"
            />
    </android.support.design.widget.TabLayout>

</FrameLayout>
